force-app/main/default/objects/Leave_Application__c/Leave_Application__c.object-meta.xml
<CustomObject>
    <label>Leave Application</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Leave Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>