force-app/main/default/objects/Leave_Application__c/fields/After_Balance__c.field-meta.xml
<CustomField>
    <fullName>After_Balance__c</fullName>
    <label>After Balance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>