force-app/main/default/objects/Leave_Application__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>WorkDay Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>