force-app/main/default/objects/Leave_Application__c/fields/Type_of_Leave__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Leave__c</fullName>
    <label>Type of Leave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>