force-app/main/default/objects/Leave_Application__c/fields/Vacation_Balance__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Balance__c</fullName>
    <formula>Employee__r.Vacation_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacation Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>