force-app/main/default/objects/Leave_Application__c/validationRules/Start_date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
    NOT(ISBLANK(Start_Date__c)),
ISCHANGED(Start_Date__c),
    Start_Date__c &lt; TODAY()
),
AND(
    NOT(ISBLANK(Start_Date__c)),
    Start_Date__c &lt; TODAY(),
ISNEW()
))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date Cannot be in Past.</errorMessage>
</ValidationRule>