force-app/main/default/objects/Leave_Application__c/listViews/Leave_Appplication_List_View.listView-meta.xml
<ListView>
    <fullName>Leave_Appplication_List_View</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type_of_Leave__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Mine</filterScope>
    <label>Leave Appplication List View</label>
</ListView>